Switch outputDirectory to frontend/dist and fix build scripts

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --outDir ../public --emptyOutDir",
-    "vercel-build": "vite build --outDir ../public --emptyOutDir",
+    "build": "vite build",
+    "vercel-build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
